<resources>
    <string name="app_name">Cheezy Town</string>
    <string name="hello_welcome_back">Hello, Welcome back!</string>
    <string name="cheezy_town">Cheezy Town</string>
    <string name="pizza">Pizza</string>
    <string name="pepperoni_pizza">Pepperoni pizza</string>
    <string name="cheese_pizza">cheese_pizza</string>
    <string name="hawaiian_pizza">Hawaiian Pizza</string>
    <string name="Hawaiian_pizza">Hawaiian pizza</string>
    <string name="hawaiian">Hawaiian</string>
    <string name="chicago_style">Chicago style</string>
    <string name="caprese_style">Caprese style</string>
    <string name="veggie">Veggie</string>
    <string name="cheese">Cheese</string>
    <string name="pasta">Pasta</string>
    <string name="pasta_with_marinara_sauce">Pasta with Marinara Sauce</string>
    <string name="penne_arrabbiata">Penne Arrabbiata</string>
    <string name="lasagna">Lasagna</string>
    <string name="lasagna_alla_bolognese">Lasagna alla Bolognese</string>
    <string name="pennearr_abbiata">pennearr abbiata</string>
    <string name="fettuccine_alfredo">Fettuccine Alfredo</string>
    <string name="fettuccine_alfredo_pasta">Fettuccine Alfredo</string>
    <string name="cheese_ravioli">Cheese Ravioli</string>
    <string name="cheese_ravioli_pasta">cheese_ravioli_pasta</string>
    <string name="cheese_raviolii">Cheese Ravioli</string>
    <string name="spaghetti_aglio_e_oli">Spaghetti Aglio e Oli</string>
    <string name="spaghetti_aglio">spaghetti_aglio</string>
    <string name="spaghetti_aglioo">Spaghetti Aglio</string>
    <string name="spaghetti_aglio_e_olio">Spaghetti Aglio e Olio</string>
    <string name="chicago_style_pizza">chicago style pizza</string>
    <string name="ham_pizza">Ham pizza</string>
    <string name="veggie_pizza">veggie pizza</string>
    <string name="caprese_style_pizza">caprese_style</string>
    <string name="margherita_pizza">Margherita pizza</string>
    <string name="margherita">Margherita</string>
    <string name="pepperoni_pizza1">Pepperoni pizza</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="quattro_formaggi_pizza">Quattro Formaggi pizza</string>
    <string name="quattro_formaggi">Quattro Formaggi</string>
    <string name="vegetariana_pizza">vegetariana Pizza</string>
    <string name="vegetariana">Vegetariana</string>
    <string name="vegan">Vegan</string>
    <string name="side_dishes">Side Dishes</string>
    <string name="header_image">header image</string>
    <string name="smallbutton">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extra_large">Extra Large</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="pepperoni1">Pepperoni</string>
    <string name="mushroom">Mushroom</string>
    <string name="groundbeef">Grounded Beef</string>
    <string name="banana_peppers">Banana Peppers</string>
    <string name="bacon">Bacon</string>
    <string name="pick_the_pizza_size">pick the pizza size</string>
    <string name="size">Size</string>
    <string name="becon">Becon</string>
    <string name="toppings">Toppings</string>
    <string name="grilled_chicken">Grilled Chicken</string>
    <string name="clear">Clear</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total Price: </string>
    <string name="totalitems">Total Items: </string>

    <string name="stuffed_mushrooms">Stuffed Mushrooms</string>
    <string name="stuffed_mushroomss">Stuffed Mushrooms</string>
    <string name="focaccia1">focaccia</string>
    <string name="focaccia">Focaccia</string>
    <string name="fried_calamari">Fried Calamari</string>
    <string name="fried_calamari1">fried calamari</string>
    <string name="antipastoplatter1">antipasto platter</string>
    <string name="antipasto_platter">Antipasto Platter</string>
    <string name="garlic_bread">Garlic Bread</string>

    <string name="formated_total_price">Total Price: %1$s</string>
    <string name="formated_totalitems">Total Items: %1$s</string>
    <string name="selected_pizza">Selected Pizza:</string>
    <string name="formated_selected_pizza">Selected Pizza: %s</string>
    <string name="price">Price:</string>
    <string name="formated_price">Price: %s</string>
    <string name="medium_3_99">medium + $3.99</string>
    <string name="medium_n_3_99">Medium\n+ $3.99</string>
    <string name="large_n_5_99">Large \n+ $5.99</string>
    <string name="extra_large_n_7_99">Extra large \n + $7.99</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="number_of_pizza">Quantity</string>
</resources>