<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/card"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textColor="@color/text_color1"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                tools:ignore="MissingConstraints,UselessParent"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="124dp">

                <RadioButton
                    android:id="@+id/smallPizza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smallbutton" />

                <RadioButton
                    android:id="@+id/mediumPizza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medium" />

                <RadioButton
                    android:id="@+id/largePizza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large" />

                <RadioButton
                    android:id="@+id/eLargePizza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_large" />
            </RadioGroup>

            <EditText
                android:id="@+id/pizzaQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/number_of_pizza"
                android:ems="10"
                android:hint="@string/number_of_pizza"
                android:inputType="number" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppings"
                android:textColor="@color/text_color1"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/bananaPeppersTopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/bacon" />

            <CheckBox
                android:id="@+id/grilledChickenTopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/grilled_chicken" />

            <CheckBox
                android:id="@+id/GroundBeefTopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/groundbeef" />

            <CheckBox
                android:id="@+id/mushroomTopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/mushroom" />

            <CheckBox
                android:id="@+id/PepperoniTopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/pepperoni1" />

            <CheckBox
                android:id="@+id/extraCheeseTopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/extra_cheese" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:layout_marginTop="40dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/totalPriceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/total_price"/>
        <TextView
            android:id="@+id/totalItemsView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/totalitems"/>

    </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button

                android:id="@+id/clearButton"
                style="?android:attr/buttonBarButtonStyle"
                android:backgroundTint="@color/text_color1"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/clear"
                android:layout_margin="20dp">

            </Button>

            <Button
                android:id="@+id/Checkout"
                style="?android:attr/buttonBarButtonStyle"
                android:backgroundTint="@color/checkout"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/checkout"
                android:layout_margin="20dp">

            </Button>

        </LinearLayout>


</LinearLayout>